--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,7 @@
+
+$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
+@import "~bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+
 @import '_variables';
 @import '_colours';
 @import '_base';
