--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,9 @@
 
 @import "~bootstrap/scss/bootstrap.scss";
 
+$fa-font-path: "~font-awesome/fonts";
+@import '~font-awesome/scss/font-awesome.scss';
+
 @import '_variables';
 @import '_colours';
 @import '_base';
