--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,8 +1,12 @@
 
 @import "~bootstrap/scss/bootstrap.scss";
 
+
 $fa-font-path: "~font-awesome/fonts";
 @import '~font-awesome/scss/font-awesome.scss';
+
+@import "superhero.scss";
+
 
 @import '_variables';
 @import '_colours';
